--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 1) About
 
-This project is a solution to the Kaggel Mercedes contest (https://www.kaggle.com/c/mercedes-benz-greener-manufacturing).
+This project is a solution to the Kaggle Mercedes contest (https://www.kaggle.com/c/mercedes-benz-greener-manufacturing).
 
 Its task is to reduce the time it takes to test a new car. The data is a .csv file containing, on each line,
 the test results for that given car. It is a multi dimensional data. The y column is the most important one,
